# ScreenRecorderFinal

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Recorder.cpp  Recorder.h  ScreenRecorder.pro  log.txt  main.cpp
Win32/release/: CMakeCache.txt  Makefile  ScreenRecorderProject.cbp  cmake_install.cmake  log.txt
audio_test/: AudioRecorder.cpp  AudioRecorder.h  main2.cpp
